_sass/_main.scss
/* ============================= */
/* ========== VARIABLES ========= */
/* ============================= */

$separator-color: #edf2f7;

/* ============================= */
/* ======= RESET & BASE ========= */
/* ============================= */

*,:after,:before {
    box-sizing: border-box;
    background-color: inherit;
    color: inherit;
    margin: 0;
    padding: 0;
}

body {
    font-family: system-ui, sans-serif;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    line-height: 1.5;
    font-size: 1rem;
    color: rgb(22, 23, 26);
    overflow-y: scroll; /* Toujours afficher la scrollbar pour éviter les décalages */
}

ul {
    margin-left: 1rem;
}

/* ============================= */
/* ======== TYPOGRAPHIE ========= */
/* ============================= */

h1, h2, h3, h4, h5 {
    line-height: 1;
    margin: 1rem 0;
    font-weight: 600;
}

strong, b {
    font-weight: bold;
}

blockquote {
    font-style: italic;
    border-left: 5px solid #ececec;
    padding-left: 1rem;
}

code, pre {
    background: rgb(236, 237, 238);
}

code {
    padding: .1rem;
}

pre {
    padding: 1rem;
    overflow-x: auto;
}

pre code {
    border: none;
}

pre {
    margin: .5rem 0;
    padding: .5rem;
}

/* ============================= */
/* ======== LAYOUT (STRUCTURE) == */
/* ============================= */

main {
    display: flex;
    flex-wrap: wrap;
    max-width: 60rem;
    margin: 2rem auto;
    padding: 1rem;
}

section {
    flex-basis: 0;
    flex-grow: 999;
    min-width: 70%;
    display: flex;
    flex-direction: column;
}

header, section {
    padding: 1rem;
}


/* ============================= */
/* ======= NAVIGATION ========== */
/* ============================= */

nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.5em;
    border-right: 1px solid $separator-color;
}

.logo {
    max-height: 2em;
    margin-left: 2rem;
}

header {
    flex-basis: 10rem;
    flex-grow: 1;
    position: relative;
}

header a {
    text-decoration: none;
}

header li {
    margin-bottom: .2rem;
    text-align: right;
    margin-right: 2rem;
}

header a.active {
    font-weight: bold;
}

header ul {
    list-style: none;
}

/* ============================= */
/* ======== LIENS ============== */
/* ============================= */

a {
    color: #000;
    text-decoration-skip-ink: auto;
    text-decoration: underline;
}

/* ============================= */
/* ======== ICONES ============= */
/* ============================= */

.category-icon, .progress-icon {
    font-size: 1em;
    margin-right: 0.2em;
  }

  // Catégories
  .book-icon {
    color: #4f5bff; 
  }

  .game-icon {
    color: #cf0000; 
  }

  .film-icon {
    color: #dda900; 
  }

  .serie-icon {
    color: #009908; 
  }
  
  .default-icon {
    color: #3b3b3b; 
  }

  // Progression
  .completed-icon {
    color: #28a745; 
  }
  
  .in-progress-icon {
    color: #d36600; 
  }
  
  .abandoned-icon {
    color: #dc3545; 
  }
  
  .planned-icon {
    color: #007bff; 
  }
  
  .other-icon {
    color: #6c757d; 
  }
  
  // Possession
  .owned-icon {
    color: #65a1d3; 
  }
  
  .not-owned-icon {
    color: #b81515; 
  }

/* ============================= */
/* ====== LISTE DES BILLETS ===== */
/* ============================= */

.posts li {
    display: flex;
    justify-content: space-between;
    margin-bottom: .5rem;
    border-bottom: 2px dashed $separator-color;
}

.posts li a,
.posts li div{
    display: flex;
    text-decoration: none;
}

// Bloc des icônes dans la liste des posts
.posts li .posts-list-icons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 2.5em; 
    margin-right: 0.3em;
}

.posts li time {
    padding-left: 1rem;
    white-space: nowrap;
    font-variant-numeric: tabular-nums;
}

/* ============================= */
/* ======== BILLETS ============= */
/* ============================= */

.post {
    padding-bottom: 3rem;
}

.post p {
    margin: .5rem 0;
}

.post #page-title {
    padding-bottom: 0.5em;
    border-bottom: 2px dashed $separator-color;
}

.post h1, .post h2, .post h3, .post h4 {
    margin: 1rem 0;
}

.post h2:first-child {
    margin-top: 0;
}

/* ============================= */
/* ======== FICHES ============= */
/* ============================= */

.book-container, .game-container {
    display: flex;
    align-items: flex-start; 
    gap: 20px;
}

.book-cover, .game-cover {
    flex: 1;
    height: 350px; 
    width: 100%; 
}

.book-cover img, .game-cover img {
    width: 100%;
    height: 100%; 
    object-fit: contain; 
	object-position: top; 
}

.book-info, .game-info {
    flex: 2;
    padding-left: 10px;
}


/* ============================= */
/* ======== BACKLOG ============= */
/* ============================= */

.backlog-section {
    margin-bottom: 30px;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  }
  
.backlog-section ul {
    list-style-type: none;
  }

  .books-section {
    background-color: #f0f8ff;
    border: 1px solid #5b24db;
  }
  
  .games-section {
    background-color: #ffdfdf;
    border: 1px solid #490000;
  }
  
  .films-section {
    background-color: #fff7e6;
    border: 1px solid #f39c12;
  }
  
  .series-section {
    background-color: #e6f9f0;
    border: 1px solid #28a745;
  }
  
  .misc-section {
    background-color: #f4f4f4;
    border: 1px solid #6c757d;
  }
  
/* ============================= */
/* ======== IMAGES ============== */
/* ============================= */

img {
    max-width: 100%;
}

figure {
    text-align: center;
    margin: 0.5rem 0;
}

figcaption {
    font-size: 0.875rem; /* Taille du texte des crédits */
    color: #666; /* Couleur du texte des crédits */
    margin-top: 0.2rem;
    font-style: italic;
}

/* ============================= */
/* ======== LIGNES DE SÉPARATION */
/* ============================= */

hr {
    background: #000;
    height: 1px;
    border: 0;
}

/* ============================= */
/* ======== MÉTA-DONNÉES ======== */
/* ============================= */

.meta {
    margin: 2rem 0;
}

/* ============================= */
/* ======== MEDIA QUERIES ======= */
/* ============================= */

@media screen and (max-width: 45rem) {

    header li {
        display: inline;
        margin-right: 1rem;
    }

    header ul {
        border-bottom: 1px solid $separator-color;
        padding-bottom: 1rem;
    }

    nav {
        gap: 0.8em;
        border-right: 0px;
    }

    nav ul {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-evenly;
    }
}

/* ============================= */
/* ======== IMPRESSION ========== */
/* ============================= */

@media print {
    .no-print, .no-print * {
        display: none !important;
    }
}

